--- a/.github/workflows/stage6_ui-testing.yml
+++ b/.github/workflows/stage6_ui-testing.yml
@@ -125,6 +125,10 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
+    needs: frontend-gui
+
+    if: ${{ always() && needs.frontend-gui.result == 'failure' }}
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
